# FlowDiP

./: README.md  __init__.py  __main__.py  data_classes.py  flowdip_nodes.py  nodes.py  pyproject.toml
flowdip/: __init__.py  __main__.py
flowdip/backend/: flowdip_be_base.py  flowdip_nodes.py  main_backend.py
flowdip/frontend/: constants.py  flowdip_fe_base.py  flowdip_nodes.py  main_frontend.py  mainwindow.py  utils.py
flowdip/frontend/hotkeys/: hotkey_functions.py
flowdip/frontend/qtwidgets/: ui_custom_opengl_widget.py  ui_local_media_player.py
flowdip/frontend/themes/: gray.css
qtwidgets/: localmediaplayer.ui  ui_local_media_player.py
themes/: dark_blue.css
